ScenarioElementクラス新設、mappingメソッドをScenarioElementに移動

--- a/src/__test__/html/index.html
+++ b/src/__test__/html/index.html
@@ -41,5 +41,34 @@
       maparray-test3
     </div>
   </div>
+  <div id="element-map-test">
+    <div class="maparray">
+      <img src="/" alt="alt1">
+      <span>element-map-test1</span>
+      <div class="deep-array">
+        <span>child1</span>
+        <span>child2</span>
+        <span>child3</span>
+      </div>
+    </div>
+    <div class="maparray">
+      <img src="/" alt="alt2">
+      <span>element-map-test2</span>
+      <div class="deep-array">
+        <span>child1</span>
+        <span>child2</span>
+        <span>child3</span>
+      </div>
+    </div>
+    <div class="maparray">
+      <img src="/" alt="alt3">
+      <span>element-map-test3</span>
+      <div class="deep-array">
+        <span>child1</span>
+        <span>child2</span>
+        <span>child3</span>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
